--- a/spt.conf
+++ b/spt.conf
@@ -4,7 +4,7 @@
     }
     upstream sptw {
     	hash $remote_addr;
-    	server 165.154.246.53:29001 max_fails=3 fail_timeout=30s;
+    	server hinet1.camdvr.org:29001 max_fails=3 fail_timeout=30s;
     }
     upstream spsg {
         hash $remote_addr;
