--- a/spt.conf
+++ b/spt.conf
@@ -235,6 +235,6 @@
     }
     server {
         listen              3389 ;                   
-        server_name tttde.sankuaiqianshao.com;
+        server_name yyyde.sankuaiqianshao.com;
         proxy_pass       tikde;
     }
