--- a/spt.conf
+++ b/spt.conf
@@ -1,6 +1,6 @@
   upstream sphk {
     	hash $remote_addr;
-    	server 103.135.102.145:29000 max_fails=3 fail_timeout=30s;
+    	server yd6m15f1st.japaneast.cloudapp.azure.com:29000 max_fails=3 fail_timeout=30s;
         server 20.247.124.162:29000 max_fails=3 fail_timeout=30s;
     }
     upstream sptw {
