--- a/lion.conf
+++ b/lion.conf
@@ -1,55 +1,31 @@
-upstream sphk {
+    upstream lionhk {
     	hash $remote_addr;
     	server yd6m15f1st.japaneast.cloudapp.azure.com:29000 max_fails=3 fail_timeout=30s;
         server 20.247.124.162:29000 max_fails=3 fail_timeout=30s;
     }
-    upstream sptw {
-    	hash $remote_addr;
-    	server hinet1.camdvr.org:29001 max_fails=3 fail_timeout=30s;
-    }
-    upstream spsg {
+    upstream lionsg {
         hash $remote_addr;
         server 206.189.150.95:29002 max_fails=3 fail_timeout=30s;
     }
-    upstream spjp {
+    upstream lionjp {
         hash $remote_addr;
         server 172.105.219.238:29003 max_fails=3 fail_timeout=30s;
     }
-    upstream spkr {
-        hash $remote_addr;
-        server 158.247.197.137:29004 max_fails=3 fail_timeout=30s;
-    }
-    upstream spus {
-        hash $remote_addr;
-        server 212.90.123.22:29005 max_fails=3 fail_timeout=30s;
-    }
-    upstream spuk {
+    upstream lionuk {
         hash $remote_addr;
         server 212.71.244.165:29006 max_fails=3 fail_timeout=30s;
     }
-    upstream spde {
-        hash $remote_addr;
-        server 194.195.116.89:29007 max_fails=3 fail_timeout=30s;
-    }
-     upstream tikus {
+     upstream lionus {
         hash $remote_addr;
         server 212.90.123.22:54321 max_fails=3 fail_timeout=30s;
     }
-    upstream tikuk {
-        hash $remote_addr;
-        server 212.71.244.165:54321 max_fails=3 fail_timeout=30s;
-    }
-    upstream tikde {
-        hash $remote_addr;
-        server 89.58.60.17:3389 max_fails=3 fail_timeout=30s;
-    }
     server {
         listen              443 ssl;                   
-        server_name spchk.sankuaiqianshao.com;
+        server_name lionhk.lioncloud.world;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/lion.crt; 
+        ssl_certificate_key /usr/local/soga/privatelion.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -60,15 +36,15 @@ upstream sphk {
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        sphk;
+        proxy_pass        lionhk;
     }
     server {
         listen              443 ssl;                   
-        server_name spctw.sankuaiqianshao.com;
+        server_name lionsg.lioncloud.world;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/lion.crt; 
+        ssl_certificate_key /usr/local/soga/privatelion.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -79,15 +55,15 @@ upstream sphk {
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        sptw;
+        proxy_pass        lionsg;
     }
     server {
         listen              443 ssl;                   
-        server_name spcsg.sankuaiqianshao.com;
+        server_name lionjp.lioncloud.world;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/lion.crt; 
+        ssl_certificate_key /usr/local/soga/privatelion.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -98,15 +74,15 @@ upstream sphk {
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        spsg;
+        proxy_pass        lionjp;
     }
     server {
         listen              443 ssl;                   
-        server_name spcjp.sankuaiqianshao.com;
+        server_name lionuk.lioncloud.world;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/lion.crt; 
+        ssl_certificate_key /usr/local/soga/privatelion.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -117,15 +93,15 @@ upstream sphk {
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        spjp;
+        proxy_pass        lionuk;
     }
     server {
         listen              443 ssl;                   
-        server_name spckr.sankuaiqianshao.com;
+        server_name lionus.lioncloud.world;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/lion.crt; 
+        ssl_certificate_key /usr/local/soga/privatelion.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -136,105 +112,5 @@ upstream sphk {
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        spkr;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcus.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spus;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcuk.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spuk;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name spcde.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        spde;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name tttus.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        tikus;
-    }
-    server {
-        listen              443 ssl;                   
-        server_name tttuk.sankuaiqianshao.com;
-        ssl_protocols       TLSv1.2 TLSv1.3;      
-
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
-        ssl_session_cache   shared:SSL:10m;            
-                                                       
-        ssl_session_timeout 10m;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass       tikuk;
-    }
-    server {
-        listen              3389 ;                   
-        server_name yyyde.sankuaiqianshao.com;
-        proxy_pass       tikde;
+        proxy_pass        lionus;
     }
