--- a/lion.conf
+++ b/lion.conf
@@ -1,15 +1,15 @@
     upstream lionhk {
     	hash $remote_addr;
     	server yd6m15f1st.japaneast.cloudapp.azure.com:29000 max_fails=3 fail_timeout=30s;
-        server 20.247.124.162:29000 max_fails=3 fail_timeout=30s;
+        server 20.247.124.162:25000 max_fails=3 fail_timeout=30s;
     }
     upstream lionsg {
         hash $remote_addr;
-        server 206.189.150.95:29002 max_fails=3 fail_timeout=30s;
+        server 206.189.150.95:25002 max_fails=3 fail_timeout=30s;
     }
     upstream lionjp {
         hash $remote_addr;
-        server 172.105.219.238:29003 max_fails=3 fail_timeout=30s;
+        server yd6m15f1st.japaneast.cloudapp.azure.com:25001 max_fails=3 fail_timeout=30s;
     }
     upstream lionuk {
         hash $remote_addr;
