--- a/lion.conf
+++ b/lion.conf
@@ -9,7 +9,7 @@
     }
     upstream lionjp {
         hash $remote_addr;
-        server yd6m15f1st.japaneast.cloudapp.azure.com:25001 max_fails=3 fail_timeout=30s;
+        server 172.104.101.85:25001 max_fails=3 fail_timeout=30s;
     }
     upstream lionuk {
         hash $remote_addr;
