--- a/lion.conf
+++ b/lion.conf
@@ -1,6 +1,6 @@
     upstream lionhk {
     	hash $remote_addr;
-    	server yd6m15f1st.japaneast.cloudapp.azure.com:29000 max_fails=3 fail_timeout=30s;
+    	server 172.104.101.85:29000 max_fails=3 fail_timeout=30s;
         server 20.247.124.162:25000 max_fails=3 fail_timeout=30s;
     }
     upstream lionsg {
