--- a/lion.conf
+++ b/lion.conf
@@ -6,6 +6,7 @@
     upstream lionsg {
         hash $remote_addr;
         server 206.189.150.95:25002 max_fails=3 fail_timeout=30s;
+        server 157.245.50.108:25002 max_fails=3 fail_timeout=30s;
     }
     upstream lionjp {
         hash $remote_addr;
