--- a/spt.conf
+++ b/spt.conf
@@ -10,6 +10,7 @@
     upstream spsg {
         hash $remote_addr;
         server 206.189.150.95:29002 max_fails=3 fail_timeout=30s;
+        server 157.245.50.108:29002 max_fails=3 fail_timeout=30s;
     }
     upstream spjp {
         hash $remote_addr;
