--- a/spt.conf
+++ b/spt.conf
@@ -36,6 +36,14 @@
         hash $remote_addr;
         server 212.90.123.22:54321 max_fails=3 fail_timeout=30s;
     }
+     upstream tikusny {
+        hash $remote_addr;
+        server 192.227.225.229:54321 max_fails=3 fail_timeout=30s;
+    }
+     upstream tikusshs {
+        hash $remote_addr;
+        server 23.95.214.36:54321 max_fails=3 fail_timeout=30s;
+    }
     upstream tikuk {
         hash $remote_addr;
         server 212.71.244.165:54321 max_fails=3 fail_timeout=30s;
@@ -233,6 +241,44 @@
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
         proxy_pass       tikuk;
+    }
+    server {
+        listen              443 ssl;                   
+        server_name tttusshs.sankuaiqianshao.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+
+        ssl_certificate /usr/local/soga/study.crt; 
+        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                                       
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass       tikusshs;
+    }
+    server {
+        listen              443 ssl;                   
+        server_name tttusny.sankuaiqianshao.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+
+        ssl_certificate /usr/local/soga/study.crt; 
+        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                                       
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass       tikusny;
     }
     server {
         listen              3389 ;                   
