--- a/996cloud.conf
+++ b/996cloud.conf
@@ -19,6 +19,10 @@ upstream 996hk {
         hash $remote_addr;
         server 45.83.25.137:25003 max_fails=3 fail_timeout=30s;
     }
+     upstream 996de {
+        hash $remote_addr;
+        server 138.2.133.156:15001 max_fails=3 fail_timeout=30s;
+    }
     server {
         listen              443 ssl;                   
         server_name 996hk.996cloud.xyz;
@@ -117,5 +121,27 @@ upstream 996hk {
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
         proxy_pass        996us;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name 996de.996cloud.xyz;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/996cloud.crt; 
+        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_session_cache   shared:SSL:10m;            
+
+                                                       
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        996de;
 
     }
