--- a/996cloud.conf
+++ b/996cloud.conf
@@ -1,27 +1,42 @@
-upstream 996hk {
+    upstream 996hk {
     	hash $remote_addr;
-    	server 172.105.210.143:25000 max_fails=3 fail_timeout=30s;
-        server 172.104.65.190:25000 max_fails=3 fail_timeout=30s;
+    	server 172.104.65.190:15001 max_fails=3 fail_timeout=30s;
     }
     upstream 996sg {
         hash $remote_addr;
-        server 172.104.164.40:25002 max_fails=3 fail_timeout=30s;
+        server 170.187.230.210:15001 max_fails=3 fail_timeout=30s;
     }
     upstream 996jp {
         hash $remote_addr;
-        server 172.104.65.190:25001 max_fails=3 fail_timeout=30s;
+        server 172.104.90.185:15001 max_fails=3 fail_timeout=30s;
     }
     upstream 996uk {
         hash $remote_addr;
-        server 109.237.25.253:25004 max_fails=3 fail_timeout=30s;
+        server 143.47.249.213:15001 max_fails=3 fail_timeout=30s;
     }
      upstream 996us {
         hash $remote_addr;
-        server 45.83.25.137:25003 max_fails=3 fail_timeout=30s;
+        server 23.95.214.36:15001 max_fails=3 fail_timeout=30s;
     }
      upstream 996de {
         hash $remote_addr;
         server 138.2.133.156:15001 max_fails=3 fail_timeout=30s;
+    }
+     upstream 996tw {
+        hash $remote_addr;
+        server hinet1.camdvr.org:15001 max_fails=3 fail_timeout=30s;
+    }
+     upstream 996in {
+        hash $remote_addr;
+        server 170.187.239.166:15001 max_fails=3 fail_timeout=30s;
+    }
+     upstream 996kr {
+        hash $remote_addr;
+        server 138.2.133.156:15001 max_fails=3 fail_timeout=30s;
+    }
+     upstream 996ca {
+        hash $remote_addr;
+        server 132.145.109.63:15001 max_fails=3 fail_timeout=30s;
     }
     server {
         listen              443 ssl;                   
@@ -109,12 +124,10 @@ upstream 996hk {
         ssl_certificate /usr/local/soga/996cloud.crt; 
         ssl_certificate_key /usr/local/soga/private996.key; 
         ssl_session_cache   shared:SSL:10m;            
-
-                                                       
+                                           
         ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
         proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-
         proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
         proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
@@ -131,8 +144,7 @@ upstream 996hk {
         ssl_certificate /usr/local/soga/996cloud.crt; 
         ssl_certificate_key /usr/local/soga/private996.key; 
         ssl_session_cache   shared:SSL:10m;            
-
-                                                       
+                                          
         ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
         proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
@@ -143,5 +155,87 @@ upstream 996hk {
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
         proxy_pass        996de;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name 996ca.996cloud.xyz;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/996cloud.crt; 
+        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                              
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        996ca;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name 996in.996cloud.xyz;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/996cloud.crt; 
+        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                              
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        996in;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name 996tw.996cloud.xyz;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/996cloud.crt; 
+        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                           
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        996tw;
+    }
+    server {
+        listen              443 ssl;                   
+        server_name 996kr.996cloud.xyz;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/996cloud.crt; 
+        ssl_certificate_key /usr/local/soga/private996.key; 
+        ssl_session_cache   shared:SSL:10m;                                                 
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        996kr;
 
     }
