--- a/spt.conf
+++ b/spt.conf
@@ -30,9 +30,9 @@
         hash $remote_addr;
         server 138.2.133.156:29007 max_fails=3 fail_timeout=30s;
     }
-    upstream spml {
+    upstream spca {
         hash $remote_addr;
-        server mydf.shushenm.com:29008 max_fails=3 fail_timeout=30s;
+        server 132.145.109.63:31008 max_fails=3 fail_timeout=30s;
     }
      upstream tikus {
         hash $remote_addr;
@@ -265,7 +265,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spml.sankuaiqianshao.com;
+        server_name spca.sankuaiqianshao.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
         ssl_certificate /usr/local/soga/study.crt; 
@@ -280,7 +280,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass       spml;
+        proxy_pass       spca;
     }
     server {
         listen              443 ssl;                   
