--- a/996cloud.conf
+++ b/996cloud.conf
@@ -40,7 +40,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name 996hk.996cloud.xyz;
+        server_name fschk.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
         ssl_certificate /usr/local/soga/996cloud.crt; 
@@ -58,7 +58,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name 996sg.996cloud.xyz;
+        server_name fscsg.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
         ssl_certificate /usr/local/soga/996cloud.crt; 
@@ -79,7 +79,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name 996jp.996cloud.xyz;
+        server_name fscjp.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
         ssl_certificate /usr/local/soga/996cloud.crt; 
@@ -99,7 +99,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name 996uk.996cloud.xyz;
+        server_name fscuk.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
         ssl_certificate /usr/local/soga/996cloud.crt; 
@@ -138,7 +138,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name 996de.996cloud.xyz;
+        server_name fscde.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
         ssl_certificate /usr/local/soga/996cloud.crt; 
@@ -159,7 +159,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name 996ca.996cloud.xyz;
+        server_name fscca.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
         ssl_certificate /usr/local/soga/996cloud.crt; 
@@ -180,7 +180,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name 996in.996cloud.xyz;
+        server_name fscin.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
         ssl_certificate /usr/local/soga/996cloud.crt; 
@@ -201,7 +201,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name 996tw.996cloud.xyz;
+        server_name fsctw.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
         ssl_certificate /usr/local/soga/996cloud.crt; 
@@ -221,7 +221,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name 996kr.996cloud.xyz;
+        server_name fsckr.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
         ssl_certificate /usr/local/soga/996cloud.crt; 
