--- a/996cloud.conf
+++ b/996cloud.conf
@@ -120,7 +120,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name 996us.996cloud.xyz;
+        server_name fscus.fscloud123456789.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
         ssl_certificate /usr/local/soga/996cloud.crt; 
