--- a/ovocloud.conf
+++ b/ovocloud.conf
@@ -99,7 +99,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name fscuk.fscloud123456789.com;
+        server_name ovouk.ovogreat.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
         ssl_certificate /usr/local/soga/ovocloud.crt; 
