--- a/996cloud.conf
+++ b/996cloud.conf
@@ -1,6 +1,7 @@
     upstream 996hk {
     	hash $remote_addr;
     	server 206.189.95.192:15001 max_fails=3 fail_timeout=30s;
+        server 206.189.84.152:15001 max_fails=3 fail_timeout=30s;
     }
     upstream 996sg {
         hash $remote_addr;
