--- a/douzi.conf
+++ b/douzi.conf
@@ -1,14 +1,14 @@
     upstream douzihk {
-    	hash $remote_addr;
-    	server 103.135.102.178:12349 max_fails=3 fail_timeout=30s;
+      hash $remote_addr;
+      server 103.135.102.123:12349 max_fails=3 fail_timeout=30s;
     }
     upstream douzisg {
         hash $remote_addr;
-        server 206.189.95.192:12349 max_fails=3 fail_timeout=30s;
+        server 13.250.47.91:12349 max_fails=3 fail_timeout=30s;
     }
     upstream douzijp {
         hash $remote_addr;
-        server 172.104.67.214:12349 max_fails=3 fail_timeout=30s;
+        server 52.192.63.45:12349 max_fails=3 fail_timeout=30s;
     }
     upstream douziuk {
         hash $remote_addr;
@@ -34,9 +34,17 @@
         hash $remote_addr;
         server 3.37.30.10:12349 max_fails=3 fail_timeout=30s;
     }
-     upstream douzica {
+     upstream douzide {
         hash $remote_addr;
-        server 132.145.109.63:12349 max_fails=3 fail_timeout=30s;
+        server 185.232.70.23:12349 max_fails=3 fail_timeout=30s;
+    }
+     upstream douziyn {
+        hash $remote_addr;
+        server 103.183.112.212:12349 max_fails=3 fail_timeout=30s;
+    }
+     upstream douziels {
+        hash $remote_addr;
+        server 193.38.51.100:12349 max_fails=3 fail_timeout=30s;
     }
     server {
         listen              443 ssl;                   
@@ -48,7 +56,7 @@
         ssl_session_cache   shared:SSL:10m;                                                          
         ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+      proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
         proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
         proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
@@ -67,7 +75,7 @@
                                                
         ssl_session_timeout 10m;
         proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+      proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
         proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
         proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
@@ -159,7 +167,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name douzica.ovogreat.com;
+        server_name douzide.ovogreat.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
         ssl_certificate /usr/local/soga/ovocloud.crt; 
@@ -175,7 +183,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        douzica;
+        proxy_pass        douzide;
 
     }
     server {
@@ -237,5 +245,45 @@
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
         proxy_pass        douzikr;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name douziyn.ovogreat.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/ovocloud.crt; 
+        ssl_certificate_key /usr/local/soga/privateovo.key; 
+        ssl_session_cache   shared:SSL:10m;                                                 
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        douziyn;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name douziels.ovogreat.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/ovocloud.crt; 
+        ssl_certificate_key /usr/local/soga/privateovo.key; 
+        ssl_session_cache   shared:SSL:10m;                                                 
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        douziels;
 
     }
