--- a/douzi.conf
+++ b/douzi.conf
@@ -18,7 +18,7 @@
         hash $remote_addr;
         server 23.95.214.36:12349 max_fails=3 fail_timeout=30s;
     }
-     upstream douzide {
+     upstream douzitg {
         hash $remote_addr;
         server 138.2.133.156:12349 max_fails=3 fail_timeout=30s;
     }
@@ -146,7 +146,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name douzide.ovogreat.com;
+        server_name douzitg.ovogreat.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
         
         ssl_certificate /usr/local/soga/ovocloud.crt; 
@@ -162,7 +162,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        douzide;
+        proxy_pass        douzitg;
 
     }
     server {
