--- a/nginx.service
+++ b/nginx.service
@@ -10,6 +10,7 @@ ExecStart=/usr/local/nginx/sbin/nginx
 ExecReload=/usr/local/nginx/sbin/nginx -s reload
 ExecStop=/usr/local/nginx/sbin/nginx -s stop
 PrivateTmp=true
+Restart=always
  
 [Install]
 WantedBy=multi-user.target
