--- a/miaosu.conf
+++ b/miaosu.conf
@@ -1,1 +1,244 @@
+    upstream sphk {
+    	hash $remote_addr;
+    	server 13.112.65.54:15001 max_fails=3 fail_timeout=30s;
+        server 3.113.7.217:15001 max_fails=3 fail_timeout=30s;
+    }
+    upstream spsg {
+        hash $remote_addr;
+        server 159.223.95.17:15001 max_fails=3 fail_timeout=30s;
+        server 172.104.177.34:15001 max_fails=3 fail_timeout=30s;
+    }
+    upstream spjp {
+        hash $remote_addr;
+        server 172.105.201.119:15001 max_fails=3 fail_timeout=30s;
+        server 172.105.201.80:15001 max_fails=3 fail_timeout=30s;
+    }
+    upstream spuk {
+        hash $remote_addr;
+        server 143.47.249.213:15001 max_fails=3 fail_timeout=30s;
+    }
+     upstream spus {
+        hash $remote_addr;
+        server 45.83.25.137:15001 max_fails=3 fail_timeout=30s;
+    }
+     upstream spde {
+        hash $remote_addr;
+        server 138.2.133.156:15001 max_fails=3 fail_timeout=30s;
+    }
+     upstream sptw {
+        hash $remote_addr;
+        server hinet1.camdvr.org:15001 max_fails=3 fail_timeout=30s;
+    }
+     upstream spin {
+        hash $remote_addr;
+        server 45.79.117.46:15001 max_fails=3 fail_timeout=30s;
+    }
+     upstream spkr {
+        hash $remote_addr;
+        server 150.230.254.120:15001 max_fails=3 fail_timeout=30s;
+    }
+     upstream spca {
+        hash $remote_addr;
+        server 132.145.109.63:15001 max_fails=3 fail_timeout=30s;
+    }
+    server {
+        listen              443 ssl;                   
+        server_name sphk.1234567890spcloud.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
+        ssl_session_cache   shared:SSL:10m;                                                          
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        sphk;
+    }
+    server {
+        listen              443 ssl;                   
+        server_name spsg.1234567890spcloud.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                               
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        
+        proxy_pass        spsg;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name spjp.1234567890spcloud.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                                     
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        spjp;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name spuk.1234567890spcloud.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                               
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        spuk;
+    }
+    server {
+        listen              443 ssl;                   
+        server_name spus.1234567890spcloud.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                           
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        spus;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name spde.1234567890spcloud.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                          
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        spde;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name spca.1234567890spcloud.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                              
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        spca;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name spin.1234567890spcloud.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                              
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        spin;
+
+    }
+    server {
+        listen              443 ssl;                   
+        server_name sptw.1234567890spcloud.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
+        ssl_session_cache   shared:SSL:10m;            
+                                           
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        sptw;
+    }
+    server {
+        listen              443 ssl;                   
+        server_name spkr.1234567890spcloud.com;
+        ssl_protocols       TLSv1.2 TLSv1.3;      
+        
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
+        ssl_session_cache   shared:SSL:10m;                                                 
+        ssl_session_timeout 10m;
+        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
+        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+
+        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
+        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
+        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
+        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+        proxy_protocol    on;
+        proxy_pass        spkr;
+
+    }
