--- a/miaosu.conf
+++ b/miaosu.conf
@@ -1,35 +1,35 @@
-    upstream sphk {
+    upstream miaosuhk {
     	hash $remote_addr;
     	server 13.112.65.54:10091 max_fails=3 fail_timeout=30s;
         server 3.113.7.217:10091 max_fails=3 fail_timeout=30s;
     }
-    upstream spsg {
+    upstream miaosusg {
         hash $remote_addr;
         server 159.223.95.17:10091 max_fails=3 fail_timeout=30s;
         server 172.104.177.34:10091 max_fails=3 fail_timeout=30s;
     }
-    upstream spjp {
+    upstream miaosujp {
         hash $remote_addr;
         server 172.105.201.119:10091 max_fails=3 fail_timeout=30s;
         server 172.105.201.80:10091 max_fails=3 fail_timeout=30s;
     }
-    upstream spuk {
+    upstream miaosuuk {
         hash $remote_addr;
         server 143.47.249.213:10091 max_fails=3 fail_timeout=30s;
     }
-     upstream spus {
+     upstream miaosuus {
         hash $remote_addr;
         server 45.83.25.137:10091 max_fails=3 fail_timeout=30s;
     }
-     upstream spde {
+     upstream miaosude {
         hash $remote_addr;
         server 138.2.133.156:10091 max_fails=3 fail_timeout=30s;
     }
-     upstream sptw {
+     upstream miaosutw {
         hash $remote_addr;
         server hinet1.camdvr.org:10091 max_fails=3 fail_timeout=30s;
     }
-     upstream spin {
+     upstream miaosuin {
         hash $remote_addr;
         server 45.79.117.46:10091 max_fails=3 fail_timeout=30s;
     }
@@ -37,7 +37,7 @@
         hash $remote_addr;
         server 150.230.254.120:10091 max_fails=3 fail_timeout=30s;
     }
-     upstream spca {
+     upstream miaosuca {
         hash $remote_addr;
         server 132.145.109.63:10091 max_fails=3 fail_timeout=30s;
     }
@@ -57,7 +57,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        sphk;
+        proxy_pass        miaosuhk;
     }
     server {
         listen              443 ssl;                   
@@ -77,7 +77,7 @@
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
         
-        proxy_pass        spsg;
+        proxy_pass        miaosusg;
 
     }
     server {
@@ -97,7 +97,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        spjp;
+        proxy_pass        miaosujp;
 
     }
     server {
@@ -117,7 +117,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        spuk;
+        proxy_pass        miaosuuk;
     }
     server {
         listen              443 ssl;                   
@@ -136,7 +136,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        spus;
+        proxy_pass        miaosuus;
 
     }
     server {
@@ -157,7 +157,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        spde;
+        proxy_pass        miaosude;
 
     }
     server {
@@ -178,7 +178,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        spca;
+        proxy_pass        miaosuca;
 
     }
     server {
@@ -199,7 +199,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        spin;
+        proxy_pass        miaosuin;
 
     }
     server {
@@ -220,7 +220,7 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        sptw;
+        proxy_pass        miaosutw;
     }
     server {
         listen              443 ssl;                   
@@ -239,6 +239,6 @@
         proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
         proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
         proxy_protocol    on;
-        proxy_pass        spkr;
+        proxy_pass        miaosukr;
 
     }
