--- a/miaosu.conf
+++ b/miaosu.conf
@@ -33,7 +33,7 @@
         hash $remote_addr;
         server 45.79.117.46:10091 max_fails=3 fail_timeout=30s;
     }
-     upstream spkr {
+     upstream miaosukr {
         hash $remote_addr;
         server 150.230.254.120:10091 max_fails=3 fail_timeout=30s;
     }
