--- a/spt.conf
+++ b/spt.conf
@@ -56,11 +56,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spchk.sankuaiqianshao.com;
+        server_name spchk.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -75,11 +75,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spctw.sankuaiqianshao.com;
+        server_name spctw.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -94,11 +94,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spcsg.sankuaiqianshao.com;
+        server_name spcsg.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -113,11 +113,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spcjp.sankuaiqianshao.com;
+        server_name spcjp.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -132,11 +132,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spckr.sankuaiqianshao.com;
+        server_name spckr.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -151,11 +151,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spcus.sankuaiqianshao.com;
+        server_name spcus.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -170,11 +170,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spcuk.sankuaiqianshao.com;
+        server_name spcuk.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -189,11 +189,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spcde.sankuaiqianshao.com;
+        server_name spcde.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -208,11 +208,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name tttus.sankuaiqianshao.com;
+        server_name tttus.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -227,11 +227,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name tttuk.sankuaiqianshao.com;
+        server_name tttuk.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -246,11 +246,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name tttusshs.sankuaiqianshao.com;
+        server_name tttusshs.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -265,11 +265,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spca.sankuaiqianshao.com;
+        server_name spca.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
@@ -284,11 +284,11 @@
     }
     server {
         listen              443 ssl;                   
-        server_name tttusny.sankuaiqianshao.com;
+        server_name tttusny.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
-        ssl_certificate /usr/local/soga/study.crt; 
-        ssl_certificate_key /usr/local/soga/private.key; 
+        ssl_certificate /usr/local/soga/spcloud.crt; 
+        ssl_certificate_key /usr/local/soga/privatesp.key; 
         ssl_session_cache   shared:SSL:10m;            
                                                        
         ssl_session_timeout 10m;
