--- a/spt.conf
+++ b/spt.conf
@@ -265,7 +265,7 @@
     }
     server {
         listen              443 ssl;                   
-        server_name spca.1234567890spcloud.com;
+        server_name spcca.1234567890spcloud.com;
         ssl_protocols       TLSv1.2 TLSv1.3;      
 
         ssl_certificate /usr/local/soga/spcloud.crt; 
